# photo_cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/photo_organizer/: __init__.py  cli.py  config.py  duplicates.py  exiftool_config.pl  flatten.py  metadata.py  organizer.py  reports.py  whatsapp.py
tests/: __init__.py  test_cli.py  test_config.py  test_duplicates.py  test_metadata.py  test_organizer.py  test_reports.py  test_whatsapp.py
tests/data/work_sampling/: 2025-05-27_00-18-56-chicago lawn-united states-img_7461.heic
